force-app/main/default/objects/Periodo__c/Periodo__c.object-meta.xml
<CustomObject>
    <label>Período</label>
    <nameField>
        <label>Período</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Períodos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>