force-app/main/default/objects/Periodo__c/fields/ContratoPessoa__c.field-meta.xml
<CustomField>
    <fullName>ContratoPessoa__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contrato de Pessoa</label>
    <referenceTo>ContratoPessoa__c</referenceTo>
    <relationshipLabel>Períodos</relationshipLabel>
    <relationshipName>Periodos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>