force-app/main/default/objects/Periodo__c/fields/DataFim__c.field-meta.xml
<CustomField>
    <fullName>DataFim__c</fullName>
    <label>Data fim</label>
    <type>Date</type>
</CustomField>