force-app/main/default/objects/Periodo__c/fields/DataInicio__c.field-meta.xml
<CustomField>
    <fullName>DataInicio__c</fullName>
    <label>Data início</label>
    <required>true</required>
    <type>Date</type>
</CustomField>