force-app/main/default/objects/Periodo__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <formula>CASESAFEID(ContratoPessoa__r.Pessoa__r.Municipio__r.Estado__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado</label>
    <type>Text</type>
</CustomField>