force-app/main/default/objects/Periodo__c/fields/Horas__c.field-meta.xml
<CustomField>
    <fullName>Horas__c</fullName>
    <label>Horas</label>
    <summarizedField>DiaPeriodo__c.Hora__c</summarizedField>
    <summaryForeignKey>DiaPeriodo__c.Periodo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>