force-app/main/default/objects/Periodo__c/fields/HorasBanco__c.field-meta.xml
<CustomField>
    <fullName>HorasBanco__c</fullName>
    <label>Horas banco</label>
    <summarizedField>DiaPeriodo__c.HoraBanco__c</summarizedField>
    <summaryForeignKey>DiaPeriodo__c.Periodo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>