force-app/main/default/objects/Periodo__c/fields/HorasBancoRemuneradas__c.field-meta.xml
<CustomField>
    <fullName>HorasBancoRemuneradas__c</fullName>
    <label>Horas banco remuneradas</label>
    <summarizedField>DiaPeriodo__c.HoraBanco__c</summarizedField>
    <summaryFilterItems>
        <field>DiaPeriodo__c.HoraBanco__c</field>
        <operation>lessThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>DiaPeriodo__c.Periodo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>