force-app/main/default/objects/Periodo__c/fields/HorasExtras__c.field-meta.xml
<CustomField>
    <fullName>HorasExtras__c</fullName>
    <label>Horas extras</label>
    <summarizedField>DiaPeriodo__c.HoraExtra__c</summarizedField>
    <summaryForeignKey>DiaPeriodo__c.Periodo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>