force-app/main/default/objects/Periodo__c/fields/HorasFerias__c.field-meta.xml
<CustomField>
    <fullName>HorasFerias__c</fullName>
    <formula>DiasFerias__c *  ContratoPessoa__r.Hora__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas férias</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>