force-app/main/default/objects/Periodo__c/fields/HorasLicencaNaoRemunerada__c.field-meta.xml
<CustomField>
    <fullName>HorasLicencaNaoRemunerada__c</fullName>
    <label>Horas licença não remunerada</label>
    <summarizedField>DiaPeriodo__c.HoraLicencaNaoRemunerada__c</summarizedField>
    <summaryForeignKey>DiaPeriodo__c.Periodo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>