force-app/main/default/objects/Periodo__c/fields/HorasLicencaRemunerada__c.field-meta.xml
<CustomField>
    <fullName>HorasLicencaRemunerada__c</fullName>
    <label>Horas licença remunerada</label>
    <summarizedField>DiaPeriodo__c.HoraLicencaRemunerada__c</summarizedField>
    <summaryForeignKey>DiaPeriodo__c.Periodo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>