force-app/main/default/objects/Periodo__c/fields/HorasNormais__c.field-meta.xml
<CustomField>
    <fullName>HorasNormais__c</fullName>
    <formula>Horas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas normais</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>