force-app/main/default/objects/Periodo__c/fields/HorasPrevistas__c.field-meta.xml
<CustomField>
    <fullName>HorasPrevistas__c</fullName>
    <formula>(QuantidadeDiasUteis__c + QuantidadeDiasFerias__c) *  ContratoPessoa__r.Hora__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas previstas total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>