force-app/main/default/objects/Periodo__c/fields/HorasPrevistasParcial__c.field-meta.xml
<CustomField>
    <fullName>HorasPrevistasParcial__c</fullName>
    <formula>(QuantidadeDiasUteisHoje__c +  QuantidadeDiasFerias__c ) * ContratoPessoa__r.Hora__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas previstas parcial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>