force-app/main/default/objects/Periodo__c/fields/HorasSobreaviso__c.field-meta.xml
<CustomField>
    <fullName>HorasSobreaviso__c</fullName>
    <label>Horas Sobreaviso</label>
    <summarizedField>DiaPeriodo__c.HoraSobreaviso__c</summarizedField>
    <summaryForeignKey>DiaPeriodo__c.Periodo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>