force-app/main/default/objects/Periodo__c/fields/Municipio__c.field-meta.xml
<CustomField>
    <fullName>Municipio__c</fullName>
    <formula>CASESAFEID(ContratoPessoa__r.Pessoa__r.Municipio__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Município</label>
    <type>Text</type>
</CustomField>