force-app/main/default/objects/Periodo__c/fields/PercentualHorasLancadas__c.field-meta.xml
<CustomField>
    <fullName>PercentualHorasLancadas__c</fullName>
    <formula>TotalHoras__c /    HorasPrevistas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentual Horas Lançadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>