force-app/main/default/objects/Periodo__c/fields/Pessoa__c.field-meta.xml
<CustomField>
    <fullName>Pessoa__c</fullName>
    <formula>CASESAFEID( ContratoPessoa__r.Pessoa__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pessoa</label>
    <type>Text</type>
</CustomField>