force-app/main/default/objects/Periodo__c/fields/QuantidadeDiasFerias__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeDiasFerias__c</fullName>
    <label>Quantidade de dias de férias</label>
    <summaryFilterItems>
        <field>DiaPeriodo__c.Tipo__c</field>
        <operation>equals</operation>
        <value>Férias</value>
    </summaryFilterItems>
    <summaryForeignKey>DiaPeriodo__c.Periodo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>