force-app/main/default/objects/Periodo__c/fields/QuantidadeDiasUteis__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeDiasUteis__c</fullName>
    <label>Quantidade de dias úteis</label>
    <summaryFilterItems>
        <field>DiaPeriodo__c.Tipo__c</field>
        <operation>equals</operation>
        <value>Útil</value>
    </summaryFilterItems>
    <summaryForeignKey>DiaPeriodo__c.Periodo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>