force-app/main/default/objects/Periodo__c/fields/QuantidadeDiasUteisHoje__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeDiasUteisHoje__c</fullName>
    <label>Quantidade de dias úteis até hoje</label>
    <summaryFilterItems>
        <field>DiaPeriodo__c.Tipo__c</field>
        <operation>equals</operation>
        <value>Útil</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>DiaPeriodo__c.DiaPassado__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>DiaPeriodo__c.Periodo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>