force-app/main/default/objects/Periodo__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&apos;Aberto&apos;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aberto</fullName>
            </value>
            <value>
                <fullName>Em emissão de nota</fullName>
            </value>
            <value>
                <fullName>Em pagamento</fullName>
            </value>
            <value>
                <fullName>Pago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>