force-app/main/default/objects/Periodo__c/fields/TotalHoras__c.field-meta.xml
<CustomField>
    <fullName>TotalHoras__c</fullName>
    <formula>Horas__c + 2* HorasExtras__c + ((-1)*HorasBancoRemuneradas__c) +  HorasLicencaRemunerada__c +  HorasFerias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Considera horas extras vezes 2</inlineHelpText>
    <label>Total de horas remuneradas</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>