force-app/main/default/objects/Periodo__c/fields/ValorFerias__c.field-meta.xml
<CustomField>
    <fullName>ValorFerias__c</fullName>
    <formula>HorasFerias__c *  ValorHora__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Férias</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>