force-app/main/default/objects/Periodo__c/fields/ValorHora__c.field-meta.xml
<CustomField>
    <fullName>ValorHora__c</fullName>
    <formula>IF(ContratoPessoa__r.ValorFixo__c,   ContratoPessoa__r.ValorFixoMoeda__c / TotalHoras__c ,  ContratoPessoa__r.ValorHora__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor hora</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>