force-app/main/default/objects/Periodo__c/fields/ValorHoraBeneficios__c.field-meta.xml
<CustomField>
    <fullName>ValorHoraBeneficios__c</fullName>
    <formula>ValorTotalBeneficios__c /  TotalHoras__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor hora benefícios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>