force-app/main/default/objects/Periodo__c/fields/ValorHorasExtras__c.field-meta.xml
<CustomField>
    <fullName>ValorHorasExtras__c</fullName>
    <formula>HorasExtras__c  * ValorHora__c * 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor horas extras</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>