force-app/main/default/objects/Periodo__c/fields/ValorHorasLicencaRemunerada__c.field-meta.xml
<CustomField>
    <fullName>ValorHorasLicencaRemunerada__c</fullName>
    <formula>ValorHora__c *  HorasLicencaRemunerada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor horas licença remunerada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>