force-app/main/default/objects/Periodo__c/fields/ValorHorasNormais__c.field-meta.xml
<CustomField>
    <fullName>ValorHorasNormais__c</fullName>
    <formula>HorasNormais__c *  ValorHora__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor horas normais</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>