force-app/main/default/objects/Periodo__c/fields/ValorTotalBeneficios__c.field-meta.xml
<CustomField>
    <fullName>ValorTotalBeneficios__c</fullName>
    <label>Valor total de benefícios</label>
    <summarizedField>BeneficioPeriodo__c.Valor__c</summarizedField>
    <summaryForeignKey>BeneficioPeriodo__c.Periodo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>