force-app/main/default/objects/Periodo__c/fields/ValorTotalHoras__c.field-meta.xml
<CustomField>
    <fullName>ValorTotalHoras__c</fullName>
    <formula>ValorHora__c * TotalHoras__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor total de horas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>