force-app/main/default/objects/Periodo__c/fields/ValorTotalPeriodo__c.field-meta.xml
<CustomField>
    <fullName>ValorTotalPeriodo__c</fullName>
    <formula>ValorTotalBeneficios__c +  ValorTotalHoras__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor total período</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>