force-app/main/default/objects/Periodo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DataInicio__c</columns>
    <columns>DataFim__c</columns>
    <columns>Horas__c</columns>
    <columns>HorasExtras__c</columns>
    <columns>TotalHoras__c</columns>
    <columns>HorasPrevistas__c</columns>
    <columns>PercentualHorasLancadas__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>