force-app/main/default/objects/Periodo__c/listViews/C_pia_de_Janeiro_2026.listView-meta.xml
<ListView>
    <fullName>C_pia_de_Janeiro_2026</fullName>
    <columns>NAME</columns>
    <columns>DataInicio__c</columns>
    <columns>DataFim__c</columns>
    <columns>Horas__c</columns>
    <columns>HorasExtras__c</columns>
    <columns>TotalHoras__c</columns>
    <columns>HorasPrevistas__c</columns>
    <columns>PercentualHorasLancadas__c</columns>
    <columns>ValorTotalPeriodo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Fevereiro 2026</value>
    </filters>
    <label>Fevereiro 2026</label>
</ListView>