force-app/main/default/objects/Periodo__c/listViews/Maio_2025.listView-meta.xml
<ListView>
    <fullName>Maio_2025</fullName>
    <columns>NAME</columns>
    <columns>DataInicio__c</columns>
    <columns>DataFim__c</columns>
    <columns>Horas__c</columns>
    <columns>HorasExtras__c</columns>
    <columns>TotalHoras__c</columns>
    <columns>HorasPrevistas__c</columns>
    <columns>PercentualHorasLancadas__c</columns>
    <columns>ValorTotalPeriodo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Maio 2025</value>
    </filters>
    <label>Maio 2025</label>
</ListView>